Input fields can no longer stretch past the edge of the page

--- a/src/cui/scss/_base/_form.scss
+++ b/src/cui/scss/_base/_form.scss
@@ -180,6 +180,14 @@ legend {
     }
 
     .cui-data {
+        // Prevent wide fields from stretching beyond the viewport
+        &,
+        select,
+        input,
+        textarea {
+            max-width: 100%;
+        }
+
         .cui-desc,
         label {
             display: inline-block;
